assets/stylesheets/mobile/mobile.scss
.full-page-chat {
  grid-template-columns: 100%;
  overflow-x: hidden;
  width: 100%;

  &.showing-channels {
    .tc-live-pane {
      display: none;
    }
  }

  .tc-full-page-header {
    padding: 0.25em 1em;
  }

  .tc-channels,
  .tc-live-pane {
    border-radius: var(--full-page-border-radius);
  }

  .tc-channels {
    border: none;
  }
}

.tc-live-pane .tc-composer .tc-composer-row {
  .tc-composer-input {
    padding-right: 75px;
  }
  .upload-btn {
    right: 48px;
  }

  .mobile-send-btn {
    position: absolute;
    padding: 10px;
    right: 12px;
    top: 50%;
    transform: translateY(-50%);
  }
}

.tc-composer-uploads-container {
  padding: 0.25em 0.75em;
}

.tc-message:not(.user-info-hidden) {
  padding: 0.25em 1em 0.1em;
  margin-top: 0.5em;

  .tc-message-container {
    max-width: calc(100% - (#{var(--small-message-left-width)} + 1em));

    .tc-text {
      width: 100%;
    }
  }
}

.tc-message.user-info-hidden {
  padding: 0.1em 1em;

  .tc-message-container {
    width: 100%;

    .tc-text {
      max-width: calc(100% - (#{var(--small-message-left-width)} + 1em));
    }
  }
}

body.has-full-page-chat .footer-nav {
  display: none !important;
}

body.has-full-page-chat {
  background-color: var(--primary-very-low);
  #main-outlet {
    padding: 0;
  }
}

.full-page-chat {
  .tc-drawer {
    width: 100%;
  }
  .tc-live-pane {
    padding: 0;
  }
  .tc-full-page-header {
    background-color: var(--secondary);
  }
  .tc-composer {
    background-color: var(--primary-very-low);
  }
  .tc-channels {
    font-weight: 500;
    background-color: var(--secondary);
  }
  .tc-full-page-header {
    padding: 0.5em 1em;
    font-weight: bold;
  }
  .tc-channels .category-chat-private .d-icon {
    background-color: var(--secondary);
  }
  .chat-channel-row .unread-chat-messages-indicator {
    width: 5px;
    height: 10px;
    left: 0px;
    top: 12px;
  }
}

